--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,13 +1,47 @@
 {%extends 'base.html'%}
 {%block content%}
 
+
 {%if user.is_authenticated %}
+
+
 {%if records %}
-<h1>Records... </h1>
+<div class="container col-md-3">
+<p class="h1">Main Table..</p>
+</div>
+<table class="table table-striped table-hover  table-bordered table-sm">
+  <thead  class="table-dark">
+    <tr>
+        <th scope="col">id</th>
+      <th scope="col">Create at</th>
+      <th scope="col">Name</th>
+      <th scope="col">email</th>
+      <th scope="col">Phone number</th>
+      <th scope="col">address</th>
+      <th scope="col">city</th>
+      <th scope="col">state</th>
+      <th scope="col">zipcode</th>
+    </tr>
+  </thead>
+<tbody>
 {%for record in records%}
-{{ record }}<br>
+<tr>
+<td>{{record.id}}</td>
+<td>{{record.created_at}}</td>
+<td>{{record.first_name}}
+{{record.last_name}}</td>
+<td>{{record.email}}</td>
+<td>{{record.phone}}</td>
+<td>{{record.address}}</td>
+<td>{{record.city}}</td>
+<td>{{record.state}}</td>
+<td>{{record.zipcode}}</td>
+</tr>
 {% endfor %}
 {% endif %}
+</tbody>
+</table>
+
 {%else%}
 
 <div class="col-md-6 offset-md-3">
