--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -12,7 +12,7 @@
 <table class="table table-striped table-hover  table-bordered table-sm">
   <thead  class="table-dark">
     <tr>
-        <th scope="col">id</th>
+      <th scope="col">id</th>
       <th scope="col">Create at</th>
       <th scope="col">Name</th>
       <th scope="col">email</th>
@@ -26,7 +26,7 @@
 <tbody>
 {%for record in records%}
 <tr>
-<td>{{record.id}}</td>
+<td><a href="{%url 'record' record.id%}">{{record.id}}</a></td>
 <td>{{record.created_at}}</td>
 <td>{{record.first_name}}
 {{record.last_name}}</td>
@@ -41,6 +41,7 @@
 {% endif %}
 </tbody>
 </table>
+
 
 {%else%}
 
