--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -11,6 +11,8 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'logout'%}">logout</a>
         </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{%url 'add_record'%}">NEW</a></li>
         {% else%}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register'%}">Register</a>
